全排列剪枝优化